2009-01-08  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-15-03
	* merge of HEAD and online branch
	* cleaned up obsolete classes
	* added ServiceWeb access and Stepper
	* synchronized EVB/SM protocol to HEAD for 300
	* updated doc

	
2008-11-20  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-15-01
	* change StateMachine::findRcmsStateListener(), don't call it in
	StateMachine::initialize() anymore, must be called by clients (BU,
	RB, EP, SM) after declaring RCMS state notifier parameters to
	application infospace!


2008-10-17  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-14-16-01
	* mods to ModuleWeb/ModuleWebRegistry to support timeout
	* mods to GlobalEventNumbers to extract info from gtpe


2008-10-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-00
	* add Kurt's changes regarding the communication with the storage
	manager
	* fuID renamed to rbBufferID
	* added fuProcId and fuGUID
	* add format version number and lumiNumber (placeholder for now)
	to the error stream data format (and thus source)

2008-10-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-16
	* StateMachine: add rcmsStateListener() method, the result of
	which should be published to the client application infospace
	(AutoBU, RB, EP, and SM)

2008-09-17  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-14-15
	* fix to squid check / web hlt access

2008-08-27  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-14-14
	* added squid presence checking 
	* modified parametersetretriever to add http option via squid or not

2008-08-27  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-14-13
	* Crc16.h moved to framework without telling me ($%^^#$%^)

2008-06-19  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-14-12
	* added fast access functions to bst, orbit and bunch crossing from EVM GT block
	* removed stray printout

2008-06-04  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-14-11