@@ -1,3 +1,9 @@
+2009-01-09  Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V00-15-04
+	* get header file for StateMachine from HEAD (spotted by Pete)
+	* re-instate RunBase as its use in StorageManager is unclear
+
 2009-01-08  Emilio Meschi <emilio.meschi@cern.ch>
 
 	* tag V00-15-03
